force-app/main/default/objects/Case/fields/Account_SLA__c.field-meta.xml
<CustomField>
    <fullName>Account_SLA__c</fullName>
    <formula>TEXT(Account.SLA__c)</formula>
    <inlineHelpText>Account SLA</inlineHelpText>
    <label>Account SLA</label>
    <type>Text</type>
</CustomField>