force-app/main/default/objects/Case/fields/Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment__c</fullName>
    <description>Comment for case</description>
    <label>Case Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>