force-app/main/default/objects/Case/fields/Feedback_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Sentiment__c</fullName>
    <label>Feedback Sentiment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>