force-app/main/default/objects/Case/fields/Feedback_Updated__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when feedback is updated</description>
    <label>Feedback Updated?</label>
    <type>Checkbox</type>
</CustomField>