force-app/main/default/objects/Case/recordTypes/Main.recordType-meta.xml
<RecordType>
    <fullName>Main</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <label>Main</label>
</RecordType>