force-app/main/default/objects/Case/listViews/All_Commented_Cases.listView-meta.xml
<ListView>
    <fullName>All_Commented_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Case_Comment__c</columns>
    <columns>Feedback_Sentiment__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Case_Comment__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Commented Cases</label>
</ListView>