force-app/main/default/objects/Case/listViews/Default_Case_Grp_Case.listView-meta.xml
<ListView>
    <fullName>Default_Case_Grp_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Default Case Grp</label>
    <queue>Default_Case_Grp</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>